--- a/superfile/hotkeys.toml
+++ b/superfile/hotkeys.toml
@@ -11,6 +11,8 @@ create_new_file_panel = ['n', '']
 next_file_panel = ['tab', 'ctrl+l']
 previous_file_panel = ['shift+tab', 'ctrl+h']
 toggle_file_preview_panel = ['f', '']
+open_sort_options_menu = ['o', '']
+toggle_reverse_sort = ['R', '']
 # change focus
 focus_on_process_bar = ['ctrl+p', '']
 focus_on_sidebar = ['ctrl+s', '']
