--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -19,6 +19,17 @@ L                 seek 5                               # Playforward 5 sec
 ,                 frame-back-step                      # Move 1 frame back
 .                 frame-step                           # Move 1 frame forward
 
+# Seek video section
+1                 seek 10 absolute-percent
+2                 seek 20 absolute-percent
+3                 seek 30 absolute-percent
+4                 seek 40 absolute-percent
+5                 seek 50 absolute-percent
+6                 seek 60 absolute-percent
+7                 seek 70 absolute-percent
+8                 seek 80 absolute-percent
+9                 seek 90 absolute-percent
+
 # Volume controls
 UP                add volume 2 
 WHEEL_UP          add volume 2 
