style(ghostty): removed light mode theming

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -44,7 +44,8 @@
 
 
 # THEME
-theme = dark:Apple System Colors, light:GitHub-Light-Default
+# theme = dark:Apple System Colors, light:GitHub-Light-Default
+theme = Apple System Colors 
 background-opacity = 0.7
 
 # FONT
