style(ghostty): change colorscheme to catpuccin-macchiato
style(neovim): change color scheme to catppuccin-macchiato

--- a/config/ghostty/config/ghostty/config
+++ b/config/ghostty/config/ghostty/config
@@ -45,7 +45,7 @@
 
 # THEME
 # theme = dark:Apple System Colors, light:GitHub-Light-Default
-theme = Apple System Colors 
+theme = catppuccin-machiato
 background-opacity = 0.9
 
 # FONT
