fix(ghostty config): fix theme name

--- a/config/ghostty/config/ghostty/config
+++ b/config/ghostty/config/ghostty/config
@@ -45,7 +45,7 @@
 
 # THEME
 # theme = dark:Apple System Colors, light:GitHub-Light-Default
-theme = catppuccin-machiato
+theme = catppuccin-macchiato
 background-opacity = 0.9
 
 # FONT
