style(starship): change character error symbol

--- a/config/starship/config/starship.toml
+++ b/config/starship/config/starship.toml
@@ -221,7 +221,7 @@ format = '[](fg:red)[$symbol](fg:foreground bg:red)[](fg:red)[-](fg:curren
 format = """
 [$symbol](fg:current_line) """
 success_symbol = '[❯](fg:bold green)'
-error_symbol = '[×](fg:bold red)'
+error_symbol = '[](fg:bold red)'
 
 [container]
 symbol = ''
