fix(gitconfig): change git user email

--- a/config/gitconfig/.gitconfig
+++ b/config/gitconfig/.gitconfig
@@ -2,6 +2,6 @@
 	user = Ephraim Beltran
 [user]
 	name = Ephraim Beltran
-	email = 100506096+ephraim-beltran@users.noreply.github.com
+	email = 100506096+red-0130@users.noreply.github.com
 [init]
 	defaultBranch = main
