--- a/config/superfile/config/superfile/hotkeys.toml
+++ b/config/superfile/config/superfile/hotkeys.toml
@@ -2,6 +2,7 @@
 # Global hotkeys (cannot conflict with other hotkeys)
 confirm = ['enter', 'l']
 quit = ['ctrl+c', 'leader+q']
+cd_quit = ['Q', '']
 # movement
 list_up = ['k', '']
 list_down = ['j', '']
@@ -27,6 +28,7 @@ copy_items = ['y', '']
 paste_items = ['p', '']
 cut_items = ['x', '']
 delete_items = ['d', '']
+permanently_delete_items = ['D', '']
 # compress and extract
 extract_file = ['ctrl+e', '']
 compress_file = ['ctrl+a', '']
@@ -40,6 +42,7 @@ change_panel_mode = ['v', '']
 open_help_menu = ['?', '']
 open_command_line = [':', '']
 open_spf_prompt = ['>', '']
+open_zoxide = ['z', '']
 copy_path = ['ctrl+p', '']
 copy_present_working_directory = ['c', '']
 toggle_footer = ['F', '']
@@ -52,7 +55,7 @@ cancel_typing = ['esc', '']
 parent_directory = ['-', 'h']
 search_bar = ['/', '']
 # =================================================================================================
-# Select mode hotkeys (can conflict with other modes, cananot conflict with global hotkeys)
+# Select mode hotkeys (can conflict with other modes, cannot conflict with global hotkeys)
 file_panel_select_mode_items_select_down = ['J', '']
 file_panel_select_mode_items_select_up = ['K', '']
 file_panel_select_all_items = ['A', '']
