--- a/config/ssh/config/ssh/config
+++ b/config/ssh/config/ssh/config
@@ -27,18 +27,22 @@ Host coder.*
     StrictHostKeyChecking=no
     UserKnownHostsFile=/dev/null
     LogLevel ERROR
+    ForwardAgent yes
     ProxyCommand /usr/local/bin/coder --global-config /home/ephraim/.config/coderv2 ssh --stdio --ssh-host-prefix coder. %h
 
 Host *.coder
     ConnectTimeout=0
     StrictHostKeyChecking=no
     UserKnownHostsFile=/dev/null
+    ForwardAgent yes
     LogLevel ERROR
 
 Match host *.coder !exec "/usr/local/bin/coder connect exists %h"
+    ForwardAgent yes
     ProxyCommand /usr/local/bin/coder --global-config /home/ephraim/.config/coderv2 ssh --stdio --hostname-suffix coder %h
     
 Host vite.*
+    ForwardAgent yes
     ConnectTimeout=0
     StrictHostKeyChecking=no
     Compression yes
@@ -54,6 +58,7 @@ Match host *.vite !exec "/usr/local/bin/coder connect exists %h"
     LocalForward 5173 localhost:5173
     UserKnownHostsFile=/dev/null
     LogLevel ERROR
+    ForwardAgent yes
     ProxyCommand /usr/local/bin/coder --global-config /home/ephraim/.config/coderv2 ssh --stdio --hostname-suffix vite %h
     
 # ------------END-CODER------------
