--- a/config/nvim/config/nvim/package.json
+++ b/config/nvim/config/nvim/package.json
@@ -6,17 +6,21 @@
   "contributes": {
     "snippets": [
       {
-        "language": [
-          "javascript",
-          "javascriptreact"
-        ],
+        "language": ["javascript", "javascriptreact"],
+        "path": "./snippets/javascript/javascript.json"
+      },
+      {
+        "language": "javascriptreact",
         "path": "./snippets/javascript/js+jsx-snippet.json"
       },
       {
-        "language": [
-          "javascript"
-        ],
-        "path": "./snippets/javascript/jest-snippets.json"
+        "language": "javascript",
+        "path": "./snippets/javascript/jest-snippets.json",
+        "when": "filename =~ /^.*\\.test\\.js$/"
+      },
+      {
+        "language": "css",
+        "path": "./snippets/css/css-snippets.json"
       }
     ]
   }
